--- a/src/coe528project/CustomerStartScreen.fxml
+++ b/src/coe528project/CustomerStartScreen.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -8,7 +9,7 @@
 
 <AnchorPane id="AnchorPane" prefHeight="535.0" prefWidth="507.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="coe528project.CustomerStartScreen">
    <children>
-      <TableView fx:id="tableView" layoutX="-1.0" prefHeight="374.0" prefWidth="508.0">
+      <TableView fx:id="tableView" layoutX="-1.0" layoutY="74.0" prefHeight="300.0" prefWidth="508.0">
         <columns>
           <TableColumn fx:id="bookName" prefWidth="215.0" text="Book Name" />
           <TableColumn fx:id="bookPrice" minWidth="0.0" prefWidth="214.0" text="Book Price" />
@@ -30,5 +31,6 @@
             <Font size="18.0" />
          </font>
       </Button>
+      <Label fx:id="welcomeMessage" layoutX="19.0" layoutY="12.0" prefHeight="53.0" prefWidth="470.0" />
    </children>
 </AnchorPane>
