--- a/src/coe528project/CustomerStartScreen.fxml
+++ b/src/coe528project/CustomerStartScreen.fxml
@@ -7,30 +7,22 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="535.0" prefWidth="507.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="coe528project.CustomerStartScreen">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="coe528project.CustomerStartScreen">
    <children>
-      <TableView fx:id="tableView" layoutX="-1.0" layoutY="74.0" prefHeight="300.0" prefWidth="508.0">
+      <Label layoutX="14.0" layoutY="2.0" prefHeight="45.0" prefWidth="728.0" textAlignment="CENTER">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <TableView fx:id="tableView" layoutY="47.0" prefHeight="257.0" prefWidth="750.0" AnchorPane.bottomAnchor="96.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="47.0">
         <columns>
-          <TableColumn fx:id="bookName" prefWidth="215.0" text="Book Name" />
-          <TableColumn fx:id="bookPrice" minWidth="0.0" prefWidth="214.0" text="Book Price" />
-            <TableColumn fx:id="selectBook" prefWidth="78.0" text="Select" />
+          <TableColumn fx:id="bookName" prefWidth="329.0" text="Book Name" />
+          <TableColumn fx:id="bookPrice" minWidth="0.0" prefWidth="329.0" text="Book Price" />
+            <TableColumn fx:id="selectBook" prefWidth="91.0" text="Select" />
         </columns>
       </TableView>
-      <Button fx:id="logoutButton" layoutX="348.0" layoutY="465.0" mnemonicParsing="false" onAction="#userLogout" prefHeight="39.0" prefWidth="124.0" text="Logout">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-      <Button fx:id="buyButton" layoutX="34.0" layoutY="396.0" mnemonicParsing="false" onAction="#buyBook" prefHeight="39.0" prefWidth="124.0" text="Buy">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-      <Button fx:id="redeemPointsAndBuyButton" layoutX="34.0" layoutY="465.0" mnemonicParsing="false" onAction="#redeemPointsAndBuyBook" prefHeight="39.0" prefWidth="213.0" text="Redeem Points and Buy">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-      <Label fx:id="welcomeMessage" layoutX="19.0" layoutY="12.0" prefHeight="53.0" prefWidth="470.0" />
+      <Button fx:id="buyButton" layoutX="80.0" layoutY="329.0" mnemonicParsing="false" onAction="#buyBook" prefHeight="45.0" prefWidth="94.0" text="Buy" />
+      <Button fx:id="redeemPointsAndBuyButton" layoutX="282.0" layoutY="329.0" mnemonicParsing="false" onAction="#redeemPointsAndBuyBook" prefHeight="45.0" prefWidth="193.0" text="Redeem Points and Buy" />
+      <Button fx:id="logoutButton" layoutX="588.0" layoutY="329.0" mnemonicParsing="false" onAction="#userLogout" prefHeight="45.0" prefWidth="94.0" text="Logout" />
    </children>
 </AnchorPane>
