--- a/src/coe528project/CustomerStartScreen.fxml
+++ b/src/coe528project/CustomerStartScreen.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="coe528project.CustomerStartScreen">
    <children>
-      <Label layoutX="14.0" layoutY="2.0" prefHeight="45.0" prefWidth="728.0" textAlignment="CENTER">
+      <Label fx:id="welcomeMessage" layoutX="14.0" layoutY="2.0" prefHeight="45.0" prefWidth="728.0" textAlignment="CENTER">
          <font>
             <Font size="20.0" />
          </font>
