--- a/src/coe528project/CustomerCostScreen.fxml
+++ b/src/coe528project/CustomerCostScreen.fxml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.TextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.AnchorPane?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="coe528project.CustomerCostScreen">
    <children>
-      <Label layoutX="144.0" layoutY="57.0" prefHeight="26.0" prefWidth="98.0" text="Total Cost: TC" />
-      <TextField layoutX="257.0" layoutY="56.0" />
-      <Label layoutX="169.0" layoutY="99.0" prefHeight="26.0" prefWidth="60.0" text="Points: P" />
-      <TextField layoutX="258.0" layoutY="99.0" />
-      <Label layoutX="171.0" layoutY="147.0" prefHeight="26.0" prefWidth="64.0" text="Status: S" />
-      <TextField layoutX="260.0" layoutY="142.0" />
-      <Button layoutX="162.0" layoutY="239.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="260.0" text="Logout" />
+      <Button fx:id="logoutButton" layoutX="260.0" layoutY="275.0" mnemonicParsing="false" onAction="#userLogout" text="Logout" />
+      <Label layoutX="198.0" layoutY="121.0" text="Total Cost" />
+      <Label layoutX="222.0" layoutY="162.0" text="Points" />
+      <Label layoutX="221.0" layoutY="204.0" text="Status" />
+      <Label fx:id="totalCost" layoutX="314.0" layoutY="121.0" />
+      <Label fx:id="points" layoutX="314.0" layoutY="162.0" />
+      <Label fx:id="status" layoutX="314.0" layoutY="204.0" />
    </children>
-</Pane>
+</AnchorPane>
