--- a/src/coe528project/OwnerCustomerScreen.fxml
+++ b/src/coe528project/OwnerCustomerScreen.fxml
@@ -11,37 +11,37 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="coe528project.OwnerCustomerScreen">
    <center>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #000000;" BorderPane.alignment="CENTER">
          <children>
-            <TableView fx:id="tableView" prefHeight="200.0" prefWidth="600.0">
+            <TableView fx:id="tableView" prefHeight="200.0" prefWidth="600.0" style="-fx-background-color: #000000;">
               <columns>
                 <TableColumn fx:id="usernameCol" prefWidth="209.0" text="Username" />
                 <TableColumn fx:id="passwordCol" prefWidth="235.0" text="Password" />
                   <TableColumn fx:id="pointsCol" prefWidth="155.0" text="Points" />
               </columns>
             </TableView>
-            <Label layoutX="65.0" layoutY="219.0" text="Username:">
+            <Label layoutX="65.0" layoutY="219.0" text="Username:" textFill="WHITE">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Eras Light ITC" size="18.0" />
                </font>
             </Label>
-            <Label layoutX="68.0" layoutY="260.0" text="Password:">
+            <Label layoutX="68.0" layoutY="260.0" text="Password:" textFill="WHITE">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Eras Light ITC" size="18.0" />
                </font>
             </Label>
             <TextField fx:id="usernameIn" layoutX="174.0" layoutY="220.0" prefHeight="25.0" prefWidth="166.0" />
-            <Button fx:id="addButton" layoutX="420.0" layoutY="234.0" mnemonicParsing="false" onAction="#registerUser" prefHeight="24.0" prefWidth="69.0" text="Add">
+            <Button fx:id="addButton" layoutX="420.0" layoutY="234.0" mnemonicParsing="false" onAction="#registerUser" prefHeight="45.0" prefWidth="69.0" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Add" textFill="WHITE">
+               <font>
+                  <Font name="Eras Light ITC" size="18.0" />
+               </font>
+            </Button>
+            <Button fx:id="backButton" layoutX="271.0" layoutY="310.0" mnemonicParsing="false" onAction="#back" prefHeight="40.0" prefWidth="69.0" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Back" textFill="WHITE">
                <font>
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button fx:id="backButton" layoutX="271.0" layoutY="310.0" mnemonicParsing="false" onAction="#back" prefHeight="24.0" prefWidth="69.0" text="Back">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Button>
-            <Button fx:id="deleteButton" layoutX="174.0" layoutY="310.0" mnemonicParsing="false" onAction="#removeUser" prefHeight="39.0" prefWidth="86.0" text="Delete">
+            <Button fx:id="deleteButton" layoutX="174.0" layoutY="310.0" mnemonicParsing="false" onAction="#removeUser" prefHeight="39.0" prefWidth="86.0" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Delete" textFill="WHITE">
                <font>
                   <Font size="18.0" />
                </font>
