--- a/src/coe528project/OwnerStartScreen.fxml
+++ b/src/coe528project/OwnerStartScreen.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -7,21 +8,30 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="750.0" style="-fx-background-color: #171717;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="coe528project.OwnerStartScreen">
    <center>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #000000;" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="logoutButton" layoutX="322.0" layoutY="275.0" mnemonicParsing="false" onAction="#userLogout" prefHeight="48.0" prefWidth="108.0" text="Logout">
-               <font>
-                  <Font size="24.0" />
-               </font></Button>
-            <Button fx:id="booksButton" layoutX="325.0" layoutY="77.0" mnemonicParsing="false" onAction="#books" prefHeight="39.0" prefWidth="100.0" text="Books">
+            <Button fx:id="logoutButton" layoutX="296.0" layoutY="273.0" mnemonicParsing="false" onAction="#userLogout" prefHeight="53.0" prefWidth="163.0" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Logout" textFill="WHITE">
                <font>
                   <Font size="24.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
+            <Button fx:id="booksButton" layoutX="296.0" layoutY="77.0" mnemonicParsing="false" onAction="#books" prefHeight="53.0" prefWidth="158.0" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Books" textFill="WHITE">
+               <font>
+                  <Font name="Eras Light ITC" size="24.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
-            <Button fx:id="customersButton" layoutX="303.0" layoutY="175.0" mnemonicParsing="false" onAction="#customers" prefHeight="26.0" prefWidth="145.0" text="Customers">
+            <Button fx:id="customersButton" layoutX="296.0" layoutY="174.0" mnemonicParsing="false" onAction="#customers" prefHeight="53.0" prefWidth="161.0" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Customers" textFill="WHITE">
                <font>
                   <Font size="24.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
          </children>
       </AnchorPane>
