--- a/src/coe528project/CustomerCostScreen.fxml
+++ b/src/coe528project/CustomerCostScreen.fxml
@@ -3,15 +3,37 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="coe528project.CustomerCostScreen">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="coe528project.CustomerCostScreen">
    <children>
-      <Button fx:id="logoutButton" layoutX="260.0" layoutY="275.0" mnemonicParsing="false" onAction="#userLogout" text="Logout" />
-      <Label layoutX="198.0" layoutY="121.0" text="Total Cost" />
-      <Label layoutX="222.0" layoutY="162.0" text="Points" />
-      <Label layoutX="221.0" layoutY="204.0" text="Status" />
-      <Label fx:id="totalCost" layoutX="314.0" layoutY="121.0" />
-      <Label fx:id="points" layoutX="314.0" layoutY="162.0" />
-      <Label fx:id="status" layoutX="314.0" layoutY="204.0" />
+      <Button fx:id="logoutButton" layoutX="243.0" layoutY="282.0" mnemonicParsing="false" onAction="#userLogout" prefHeight="45.0" prefWidth="114.0" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Logout" textFill="WHITE">
+         <font>
+            <Font name="Eras Medium ITC" size="24.0" />
+         </font></Button>
+      <Label layoutX="198.0" layoutY="121.0" text="Total Cost:" textFill="WHITE">
+         <font>
+            <Font name="Eras Medium ITC" size="16.0" />
+         </font></Label>
+      <Label layoutX="222.0" layoutY="162.0" text="Points:" textFill="WHITE">
+         <font>
+            <Font name="Eras Medium ITC" size="16.0" />
+         </font></Label>
+      <Label layoutX="221.0" layoutY="204.0" text="Status:" textFill="WHITE">
+         <font>
+            <Font name="Eras Medium ITC" size="16.0" />
+         </font></Label>
+      <Label fx:id="totalCost" layoutX="314.0" layoutY="121.0" textFill="WHITE">
+         <font>
+            <Font name="Eras Medium ITC" size="16.0" />
+         </font></Label>
+      <Label fx:id="points" layoutX="314.0" layoutY="162.0" textFill="WHITE">
+         <font>
+            <Font name="Eras Medium ITC" size="16.0" />
+         </font></Label>
+      <Label fx:id="status" layoutX="314.0" layoutY="204.0" textFill="WHITE">
+         <font>
+            <Font name="Eras Medium ITC" size="16.0" />
+         </font></Label>
    </children>
 </AnchorPane>
