--- a/src/coe528project/CustomerStartScreen.fxml
+++ b/src/coe528project/CustomerStartScreen.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -7,31 +8,40 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="coe528project.CustomerStartScreen">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="750.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="coe528project.CustomerStartScreen">
    <children>
-      <Label fx:id="welcomeMessage" alignment="CENTER" layoutX="14.0" layoutY="2.0" prefHeight="45.0" prefWidth="728.0" textAlignment="CENTER">
+      <Label fx:id="welcomeMessage" alignment="CENTER" layoutX="14.0" layoutY="2.0" prefHeight="45.0" prefWidth="728.0" textAlignment="CENTER" textFill="WHITE">
          <font>
-            <Font size="20.0" />
+            <Font name="Eras Medium ITC" size="22.0" />
          </font>
       </Label>
-      <TableView fx:id="tableView" layoutY="47.0" prefHeight="257.0" prefWidth="750.0" AnchorPane.bottomAnchor="96.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="47.0">
+      <TableView fx:id="tableView" layoutY="47.0" prefHeight="257.0" prefWidth="750.0" style="-fx-background-color: #000000;" AnchorPane.bottomAnchor="96.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="47.0">
         <columns>
           <TableColumn fx:id="bookName" prefWidth="329.0" text="Book Name" />
           <TableColumn fx:id="bookPrice" minWidth="0.0" prefWidth="313.0" text="Book Price" />
             <TableColumn fx:id="selectBook" prefWidth="107.0" text="Select" />
         </columns>
       </TableView>
-      <Button fx:id="buyButton" layoutX="80.0" layoutY="329.0" mnemonicParsing="false" onAction="#buyBook" prefHeight="45.0" prefWidth="94.0" text="Buy">
+      <Button fx:id="buyButton" layoutX="80.0" layoutY="329.0" mnemonicParsing="false" onAction="#buyBook" prefHeight="45.0" prefWidth="94.0" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Buy" textFill="WHITE">
          <font>
-            <Font size="16.0" />
-         </font></Button>
-      <Button fx:id="redeemPointsAndBuyButton" layoutX="282.0" layoutY="329.0" mnemonicParsing="false" onAction="#redeemPointsAndBuyBook" prefHeight="45.0" prefWidth="204.0" text="Redeem Points and Buy">
+            <Font name="Eras Medium ITC" size="18.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button fx:id="redeemPointsAndBuyButton" layoutX="282.0" layoutY="329.0" mnemonicParsing="false" onAction="#redeemPointsAndBuyBook" prefHeight="45.0" prefWidth="215.0" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Redeem Points and Buy" textFill="WHITE">
          <font>
-            <Font size="16.0" />
-         </font></Button>
-      <Button fx:id="logoutButton" layoutX="584.0" layoutY="329.0" mnemonicParsing="false" onAction="#userLogout" prefHeight="45.0" prefWidth="94.0" text="Logout">
+            <Font name="Eras Medium ITC" size="18.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button fx:id="logoutButton" layoutX="584.0" layoutY="329.0" mnemonicParsing="false" onAction="#userLogout" prefHeight="45.0" prefWidth="94.0" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Logout" textFill="WHITE">
          <font>
-            <Font size="16.0" />
-         </font></Button>
+            <Font name="Eras Medium ITC" size="18.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
    </children>
 </AnchorPane>
