--- a/src/coe528project/OwnerBookScreen.fxml
+++ b/src/coe528project/OwnerBookScreen.fxml
@@ -17,7 +17,7 @@
           <TableColumn fx:id="bookPrice" prefWidth="243.0" text="Book Price" />
         </columns>
       </TableView>
-      <Button fx:id="addButton" layoutX="328.0" layoutY="425.0" mnemonicParsing="false" onAction="#addBook" prefHeight="41.0" prefWidth="63.0" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Add" textFill="WHITE">
+      <Button fx:id="addButton" layoutX="328.0" layoutY="425.0" mnemonicParsing="false" onAction="#addBook" prefHeight="41.0" prefWidth="69.0" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Add" textFill="WHITE">
          <font>
             <Font name="Eras Medium ITC" size="18.0" />
          </font>
@@ -37,9 +37,9 @@
       </Label>
       <TextField fx:id="bookNameIn" layoutX="136.0" layoutY="412.0" />
       <TextField fx:id="bookPriceIn" layoutX="136.0" layoutY="451.0" />
-      <Button fx:id="backButton" layoutX="328.0" layoutY="524.0" mnemonicParsing="false" onAction="#back" prefHeight="39.0" prefWidth="63.0" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Back" textFill="WHITE">
+      <Button fx:id="backButton" layoutX="328.0" layoutY="524.0" mnemonicParsing="false" onAction="#back" prefHeight="39.0" prefWidth="69.0" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Back" textFill="WHITE">
          <font>
-            <Font size="18.0" />
+            <Font name="Eras Medium ITC" size="18.0" />
          </font>
          <cursor>
             <Cursor fx:constant="HAND" />
@@ -47,7 +47,7 @@
       </Button>
       <Button fx:id="deleteButton" layoutX="136.0" layoutY="524.0" mnemonicParsing="false" onAction="#removeBook" prefHeight="41.0" prefWidth="84.0" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Delete" textFill="WHITE">
          <font>
-            <Font size="18.0" />
+            <Font name="Eras Medium ITC" size="18.0" />
          </font>
          <cursor>
             <Cursor fx:constant="HAND" />
