--- a/src/coe528project/OwnerCustomerScreen.fxml
+++ b/src/coe528project/OwnerCustomerScreen.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -22,29 +23,38 @@
             </TableView>
             <Label layoutX="65.0" layoutY="219.0" text="Username:" textFill="WHITE">
                <font>
-                  <Font name="Eras Light ITC" size="18.0" />
+                  <Font name="Eras Medium ITC" size="18.0" />
                </font>
             </Label>
             <Label layoutX="68.0" layoutY="260.0" text="Password:" textFill="WHITE">
                <font>
-                  <Font name="Eras Light ITC" size="18.0" />
+                  <Font name="Eras Medium ITC" size="18.0" />
                </font>
             </Label>
             <TextField fx:id="usernameIn" layoutX="174.0" layoutY="220.0" prefHeight="25.0" prefWidth="166.0" />
             <Button fx:id="addButton" layoutX="420.0" layoutY="234.0" mnemonicParsing="false" onAction="#registerUser" prefHeight="45.0" prefWidth="69.0" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Add" textFill="WHITE">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
                <font>
-                  <Font name="Eras Light ITC" size="18.0" />
+                  <Font name="Eras Medium ITC" size="18.0" />
                </font>
             </Button>
-            <Button fx:id="backButton" layoutX="271.0" layoutY="310.0" mnemonicParsing="false" onAction="#back" prefHeight="40.0" prefWidth="69.0" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Back" textFill="WHITE">
+            <Button fx:id="backButton" layoutX="271.0" layoutY="310.0" mnemonicParsing="false" onAction="#back" prefHeight="42.0" prefWidth="71.0" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Back" textFill="WHITE">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Eras Medium ITC" size="18.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
-            <Button fx:id="deleteButton" layoutX="174.0" layoutY="310.0" mnemonicParsing="false" onAction="#removeUser" prefHeight="39.0" prefWidth="86.0" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Delete" textFill="WHITE">
+            <Button fx:id="deleteButton" layoutX="174.0" layoutY="310.0" mnemonicParsing="false" onAction="#removeUser" prefHeight="42.0" prefWidth="88.0" style="-fx-background-color: #000000; -fx-border-color: #FFFFFF;" text="Delete" textFill="WHITE">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Eras Medium ITC" size="18.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
             <TextField fx:id="passwordIn" layoutX="174.0" layoutY="261.0" prefHeight="25.0" prefWidth="166.0" />
          </children>
